# aleph

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURES.md  INSTALL.md  MEMORY.md  Makefile.toml  README.md  SPEC.md  TODO.md  VERIFICATION.md  build.rs  crsmi.lnk  dev-server.ts  dist-plugin.ts  install.sh  install.ts  link.ts  llms.txt  omnibus.yml  package.json  ralph-loop-progress.md  rustfmt.toml  settings.json  spec.md  test.ts
.claude/: CLAUDE.md  MEMORY.md  ralph-loop.local.md  settings.json
.claude/commands/: clear-snapshot.md  construct.md  context-report.md  dashboard.md  devserver.md  link.md  spec.md  test.md  update-learned.md  verify.md
.claude/construct/: trace.ts
.claude/skill-extensions/: code-review.md  debugging.md
.claude/skills/: code-review.md  debugging.md  docs-review.md  instructions-review.md  verification.md
.github/: copilot-commit-instructions.md  copilot-instructions.md
.github/workflows/: ci.yml
assets/: suzanne.glb  suzanne2.glb
assets/gltf/: glTF-Asset-Generator  glTF-Sample-Assets
commands/: common-ground.md
construct/: status.ts
construct/core/: INSTALL.md  README.md
construct/dashboard/: INSTALL.md  README.md  package-lock.json  package.json  requirements.md
construct/data/: INSTALL.md  README.md
construct/dev/: INSTALL.md  README.md
construct/goals/: INSTALL.md  README.md
construct/memory/: INSTALL.md  README.md  parse-transcript.ts
construct/meta/: INSTALL.md  README.md
construct/skills/: INSTALL.md  README.md  skill-rules.json
construct/telemetry/: package.json  tsconfig.json
construct/ui/: INSTALL.md  package.json
crates/aleph-app/: Cargo.toml  app.rs  lib.rs
crates/aleph-app/src/: app.rs  lib.rs
crates/aleph-core/: Cargo.toml
crates/aleph-core/src/: app.rs  constants.rs  events.rs  input.rs  layer.rs  lib.rs  log.rs  logging.rs  plugin.rs  system.rs
crates/aleph-gfx/: Cargo.toml
crates/aleph-gfx/src/: camera.rs  debug.rs  forward.rs  graph.rs  gui.rs  layer.rs  lib.rs  mesh.rs  mesh_pipeline.rs  pipeline.rs  renderer.rs  resource.rs  ui.rs  util.rs
crates/aleph-gfx/src/graph/: camera.rs  config.rs  managers.rs  mesh.rs  mesh_pipeline.rs  mod.rs  util.rs
crates/aleph-gfx/src/render/: debug.rs  forward.rs  gui.rs  mod.rs  pbr.rs  pipeline.rs  renderer.rs
crates/aleph-gfx/src/scene/: assets.rs  camera.rs  gltf.rs  gltf2.rs  material.rs  mod.rs  model.rs  util.rs
crates/aleph-gfx/src/vk/: allocator.rs  buffer.rs  command.rs  deletion.rs  device.rs  gpu.rs  image.rs  instance.rs  mod.rs  pipeline.rs  swapchain.rs
crates/aleph-hal/: Cargo.toml
crates/aleph-hal/src/: lib.rs
crates/aleph-hal/src/vk/: allocator.rs  buffer.rs  command.rs  command_buffer.rs  context.rs  debug.rs  deletion.rs  descriptor.rs  device.rs  gpu.rs  image.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  queue.rs  render_backend.rs  render_pass.rs  renderpass.rs  shader.rs  surface.rs  swapchain.rs
crates/aleph-hal/src/vk/context/: device.rs  mod.rs  swapchain.rs
crates/aleph-scene/: Cargo.toml
crates/aleph-scene/src/: assets.rs  camera.rs  gltf (2).rs  gltf.rs  gltf2.rs  graph (2).rs  graph.rs  graph2.rs  lib.rs  material.rs  mikktspace.rs  model (2).rs  model.rs  primitives.rs  util.rs
crates/aleph-vk/: Cargo.toml
crates/aleph-vk/src/: allocator.rs  buffer.rs  command.rs  debug.rs  device.rs  freelist.rs  gpu.rs  image.rs  instance.rs  lib.rs  pipeline.rs  pool.rs  swapchain.rs  sync.rs  texture.rs  uploader.rs
docs/: AGENTS.md  DEEP-RESEARCH-PHASE1-TESTS.md  DEEP-RESEARCH.md  DOCKER.md  FEATURES.md  HOOKS.md  IDEAS.md  PERPLEXITY.md  RESEARCH-DASHBOARD-UI.md  RESEARCH-TOPIC-GRAPH.md  SKILLS.md  SPEC-CORE.md  SPEC-RESEARCH.md  SPEC.md  TELEMETRY-V2-design.md  TELEMETRY-V2.md  TELEMETRY.md  TESTS.md  TODO.md  agnix.md  observability.md  research-engine-refocus.md  research-knowledge-view-mockups.html  research-redesign-plan.md  research-ui-rollout.md
docs/archived/: research-engine-refocus-comparison.md  research-engine-refocus.md  research-redesign-plan.md  research-ui-rollout.md
docs/design/: HANDOFF.md  README.md  SKILL.md
docs/mockups/: chart-controls.html  chart-panel-single.html  chart-panel-titled.html  gates-patterns.html  learning-compliance.html  life-summary-mockups.html  research-activity.html  research-graph.html  research-inspect-merge.html  research-knowledge-process-merge.html  research-landing-history-redesign.html  research.html  session-trace-learning.html  sidebar-reorg.html  skill-detail-keywords.html  summary-cards.html  summary-goal-create.html  summary-redesign.html
docs/plans/: construct-public-face.md  personal-data-isolation.md  plugin-packaging.md  post-activity-followups.md  publish-readiness.md  research-engine-build-plan.md  research-engine-refocus.md  research-redesign-plan.md  research-system-design.md  research-system-principles.md  routing-mode.md  routing-precision-code-review-trim.md  routing-tiers.md  skill-architecture.md
docs/spec/: EVAL.md  (+4 more)
dotclaude/: CLAUDE.md  settings.json
eval/: runner.ts
examples/: demo.rs  triangle.rs
hooks/: format-reminder.sh  notify.sh  rating-capture.sh  sentiment-capture.sh  session-start.sh  session-summary.sh  statusline.sh
identity/: MISSION.md  MODELS.md
memory/: CONTEXT.md
mockups/: research-redesign.html
scripts/: prune-test-sids.ts  routing-fp.ts  routing-kw.ts  routing-replay.ts  test-openrouter.ts
shaders/: colored_triangle_mesh.vert  debug.frag  debug.frag.spv  debug.geom  debug.geom.spv  debug.vert  debug.vert.spv  forward.frag  forward.frag.spv  forward.glsl  forward.slang  forward.vert  forward.vert.spv  gradient.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_old.frag.spv  shadered_ForwardPS.glsl  shadered_ForwardVS.glsl  temp.frag  temp.frag.spv  temp.vert  temp.vert.spv  temp2.frag  temp2.frag.spv  temp2.vert  temp2.vert.spv  test.vert  test.vert.spv  util.glsl
skills/: skill-rules.json
src/: .agnix.toml  .build-hash  hook-report.ts  lib.rs  logging.rs  paths.ts  prelude.rs  status.ts  trace-toggle.ts
system/: SYSTEM.md
(+1005 files in other folders)
