[package]
build = "build.rs"
edition = "2021"
include = ["examples/*", "crates/*", "shaders/*"]
name = "aleph"
version = "0.1.0"

[workspace]
members = [
    "crates/aleph-app",
    "crates/aleph-core",
    "crates/aleph-gfx",
    "crates/aleph-scene",
    "crates/aleph-vk",
]

[[example]]
name = "demo"

[workspace.dependencies]
aleph-app = { path = "crates/aleph-app" }
aleph-core = { path = "crates/aleph-core" }
aleph-gfx = { path = "crates/aleph-gfx" }
aleph-scene = { path = "crates/aleph-scene" }
aleph-vk = { path = "crates/aleph-vk" }
anyhow = "1.0.95"
bytemuck = { version = "1.7.0", features = ["derive"] }
chrono = "0.4.40"
derive_more = { version = "1.0", features = ["debug", "deref"] }
downcast-rs = "1.1.1"
fern = "0.6.2"
glam = { version = "0.29.2", features = ["bytemuck", "serde"] }
glob = "0.3.2"
egui = "0.31.1"
gltf = "0.16.0"
gpu-allocator = { version = "0.27.0", features = ["vulkan"] }
image = { version = "0.24.6", features = ["png", "jpeg"] }
petgraph = "0.6.5"
ash = { version = "0.38.0"  }
ash-window = { version = "0.13.0" }
egui-ash-renderer = { version = "0.8.0", features = ["gpu-allocator", "dynamic-rendering"]}
egui-winit = { version = "0.31.1" }
egui_extras = "0.31.1"
human-panic = "2.0.1"
humantime = "2.1.0"
itertools = "0.14.0"
log = "0.4"
palette = "0.7.6"
raw-window-handle = "0.6.2"
serde = { version = "1.0.130", features = ["derive"] }
shaderc = "0.9.1"
smol_str = "0.2.2"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winit = "0.30.5"

[dependencies]
aleph-app = { workspace = true }
aleph-core = { workspace = true }
aleph-gfx = { workspace = true }
aleph-scene = { workspace = true }
aleph-vk = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
glob = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
shaderc = { workspace = true }
tracing = { workspace = true }

[lib]
doctest = false