[package]
name = "aleph-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = { version = "1.0", features = ["debug", "deref"] }
downcast-rs = "1.1.1"
log = "0.4"
raw-window-handle = "0.6.2"
winit = "0.30.5"

aleph-hal = { path = "../aleph-hal" }
aleph-gfx = { path = "../aleph-gfx" }
aleph-core = { path = "../aleph-core" }
