[package]
authors = ["Chris Smith <crsmithdev@gmail.com>"]
categories = ["game-engines", "graphics", "utilities"]
description = "Application framework for Aleph."
documentation = "https://docs.rs/aleph-app"
edition = "2021"
homepage = "https://github.com/crsmithdev/aleph"
keywords = ["aleph", "engine", "app"]
license = "MIT"
name = "aleph-app"
readme = "README.md"
repository = "https://github.com/crsmithdev/aleph"
version = "0.1.0"

[dependencies]
aleph-core.workspace = true
aleph-scene.workspace = true
anyhow.workspace = true
chrono.workspace = true
derive_more.workspace = true
downcast-rs.workspace = true
fern.workspace = true
glam.workspace = true
human-panic.workspace = true
humantime.workspace = true
log.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
winit.workspace = true

[lib]
doctest = false