[package]
authors = ["Chris Smith <crsmithdev@gmail.com>"]
categories = ["game-engines", "graphics", "utilities"]
description = "Core utilities and types for Aleph."
documentation = "https://docs.rs/aleph-core"
edition = "2021"
homepage = "https://github.com/crsmithdev/aleph"
keywords = ["aleph", "engine", "core"]
license = "MIT"
name = "aleph-core"
readme = "README.md"
repository = "https://github.com/crsmithdev/aleph"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive_more.workspace = true
downcast-rs.workspace = true
fern.workspace = true
glam.workspace = true
human-panic.workspace = true
humantime.workspace = true
log.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
winit.workspace = true