[package]
name = "aleph-gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ash = "0.38.0"
log = "0.4"
winit = "0.30.5"
imgui = "0.12.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["gpu-allocator", "dynamic-rendering"] }                       
imgui-winit-support = "0.13.0"
derive_more = { version = "1.0", features = ["debug", "deref"] }
gltf = {version = "1.4.1"}
nalgebra = {version="0.25.0", features = ["serde-serialize", "convert-bytemuck"]}
nalgebra-glm = {version = "0.19.0", features = ["serde-serialize", "convert-bytemuck"]}
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
bytemuck = {version="1.7.0", features=["derive"]}
aleph-core = { path = "../aleph-core" }
aleph-hal = { path = "../aleph-hal" }
