[package]
name = "aleph-gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ash = "0.38.0"
ash-window = "0.13.0"
bincode = "1.3.3"
bytemuck = { version = "1.7.0", features = ["derive"] }
derive_more = { version = "1.0", features = ["debug"] }
downcast-rs = "1.1.1"
gltf = { version = "1.4.1" }
gpu-allocator = "0.27.0"
log = "0.4"
# nalgebra = { version = "0.33.2", features = [
#     "serde-serialize",
#     "convert-bytemuck",
# ] }
# nalgebra-glm = { version = "0.19.0", features = [
#     "serde-serialize",
#     "convert-bytemuck",
# ] }
raw-window-handle = "0.6.2"
serde = { version = "1.0.130", features = ["derive"] }
winit = "0.30.5"
image = "0.25.5"

aleph-core = { path = "../aleph-core" }
glam = { version = "0.29.2", features = ["bytemuck", "serde"] }
