[package]
name = "aleph-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version="1.0.86", features=["backtrace"]}

ash = "0.38.0 "
ash-window = "0.13.0"
gpu-allocator = "0.27.0"
log = "0.4"
raw-window-handle = "0.6.2"
winit = "0.30.5"
derive_more = { version = "1.0", features = ["debug", "deref"] }
gltf = "1.0"
nalgebra = {version = "0.33.0", features = ["convert-bytemuck", "serde-serialize"] }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
bytemuck = { version = "1.7.3", features = ["derive"] }
aleph-core = { path = "../aleph-core"}
    