[package]
name = "aleph-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ash = "0.38.0 "
ash-window = "0.13.0"
gpu-allocator = "0.27.0"
log = "0.4"
raw-window-handle = "0.6.2"
winit = "0.30.5"
derive_more = { version = "1.0", features = ["debug", "deref"] }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
nalgebra-glm = {version = "0.19.0", features = ["serde-serialize", "convert-bytemuck"]}
bytemuck = {version="1.7.0", features=["derive"]}
aleph-core = { path = "../aleph-core" }
