[package]
categories = ["game-development", "graphics", "rendering"]
description = "Scene management and rendering for Aleph"
documentation = "https://docs.rs/aleph-scene"
edition = "2021"
homepage = "https://github.com/nathanvoglsam/aleph"
keywords = ["gamedev", "graphics", "vulkan", "engine", "scene"]
license = "MIT OR Apache-2.0"
name = "aleph-scene"
readme = "README.md"
repository = "https://github.com/nathanvoglsam/aleph"
version = "0.1.0"

[dependencies]
aleph-core.workspace = true
aleph-vk.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
downcast-rs.workspace = true
egui-ash-renderer.workspace = true
egui-winit.workspace = true
egui_extras.workspace = true
egui.workspace = true
glob.workspace = true
glam.workspace = true
gltf.workspace = true
gpu-allocator.workspace = true
image.workspace = true
itertools.workspace = true
log.workspace = true
palette.workspace = true
petgraph.workspace = true
raw-window-handle.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
winit.workspace = true

[lib]
doctest = false