[package]
name = "aleph-vk"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph-core.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
downcast-rs.workspace = true
itertools.workspace = true
log.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
palette.workspace = true
glob.workspace = true
glam.workspace = true

ash = "0.38.0"
ash-window = "0.13.0"
gltf = "1.4.1"
gpu-allocator = "0.27.0"
image = "0.25.5"
petgraph = "0.7.1"
egui = "0.31.1"
egui-winit = "0.31.1"
egui_extras = "0.31.1"
egui-ash-renderer = { version = "0.8.0", features = ["gpu-allocator", "dynamic-rendering"]}