[package]
authors = ["Chris Smith <crsmithdev@gmail.com>"]
categories = ["game-engines", "graphics", "utilities"]
description = "Vulkan backend for Aleph."
documentation = "https://docs.rs/aleph-vk"
edition = "2021"
homepage = "https://github.com/crsmithdev/aleph"
keywords = ["aleph", "engine", "vulkan"]
license = "MIT"
name = "aleph-vk"
readme = "README.md"
repository = "https://github.com/crsmithdev/aleph"
version = "0.1.0"

[lib]
doctest = false

[features]
default = ["gpu-tests"]
gpu-tests = []

[dependencies]
aleph-core.workspace = true
anyhow.workspace = true
ash-window.workspace = true
ash.workspace = true
assay.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
downcast-rs.workspace = true
egui-ash-renderer.workspace = true
egui-winit.workspace = true
egui.workspace = true
egui_extras.workspace = true
glam.workspace = true
glob.workspace = true
gltf.workspace = true
gpu-allocator.workspace = true
image.workspace = true
itertools.workspace = true
log.workspace = true
palette.workspace = true
petgraph.workspace = true
raw-window-handle.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
winit.workspace = true